[package]
name = "recall-knowledge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
cursive = "0.20.0"
open = "3.2.0"
rusqlite = "0.28.0"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.2"
